--- a/src/app/user/user-details/user-details.component.html
+++ b/src/app/user/user-details/user-details.component.html
@@ -1,5 +1,6 @@
 <tr>
     <td>{{detail.name}}</td>
     <td>{{detail.email}}</td>
+    <button [routerLink]="['/user', detail.id]">Details</button>
     <button (click)="onRemove()">Remove user</button>
 </tr>
