--- a/src/app/user/user-template-form/user-template-form.component.html
+++ b/src/app/user/user-template-form/user-template-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm">
+<form #form="ngForm" (ngSubmit)="handleSubmit(form)">
   User Name:
   <input type="text" [(ngModel)]="user.name" name="name">
   <label>
@@ -14,6 +14,8 @@
       <option *ngFor="let type of userType" [value]="type.key" [selected]="type.value === user.type">{{type.value}}</option>
     </select>
   </label>
+  <button type="submit" [disabled]="!form.valid">Save</button>
+  <button type="button" (click)="back()">Go Back</button>
 </form>
 <div>
   MODEL: {{user | json}}
